--- a/css/theme/white-mkr.css
+++ b/css/theme/white-mkr.css
@@ -4,6 +4,8 @@
  * By Hakim El Hattab, http://hakim.se
  */
 @import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans:400,700,900');
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #f5f6f8; }
 
